<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:id="@+id/callButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="callBtnListener"
            app:srcCompat="@drawable/phone" />

        <ImageView
            android:id="@+id/webButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="webBtnListener"
            app:srcCompat="@drawable/search" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="314dp"
        android:contentDescription="@string/food_items"
        app:srcCompat="@drawable/food" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/fruitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="fruitBtnClickHandler"
            android:text="@string/food_button" />

        <Button
            android:id="@+id/vegetableButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="vegetableBtnClickHandler"
            android:text="@string/vegetable_button" />

        <Button
            android:id="@+id/drinkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="drinkBtnClickHandler"
            android:text="@string/drink_button" />
    </LinearLayout>

</LinearLayout>